# slint_test

./: .gitignore  Cargo.toml  README.md
src/: main.rs  settings.rs
ui/: counter.slint  globals.slint  main.slint
